Create project basic structure

--- a/src/Geolocalization.Api/appsettings.json
+++ b/src/Geolocalization.Api/appsettings.json
@@ -1,8 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "DatabaseSettings": {
+        "ConnectionString": "mongodb://localhost:27017",
+        "DatabaseName": "geolocalization"
     }
-  },
-  "AllowedHosts": "*"
 }
