implement get partner query

--- a/src/Geolocalization.Application.Query/Geolocalization.Application.Query.csproj
+++ b/src/Geolocalization.Application.Query/Geolocalization.Application.Query.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="MediatR" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Geolocalization.Domain\Geolocalization.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
